<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.versus.versusweather.MainActivity">

    <requestFocus />

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_toolbar"
            android:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageButton
                    android:id="@+id/app_logo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/versus_logo"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/app_logo"
                    android:layout_toRightOf="@id/app_logo"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_centerVertical="true"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_below="@+id/app_toolbar"
            android:id="@+id/swipe_refresh_layout"
            android:padding="5dp"
            android:background="#fafafa"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:id="@+id/search_card"
                        android:layout_width="match_parent"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true"
                        android:visibility="gone"
                        app:cardCornerRadius="10dp"
                        android:animateLayoutChanges="true"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.v7.widget.SearchView
                                android:id="@+id/location_search"
                                app:queryHint="Search location"
                                android:queryHint="Search location"
                                app:iconifiedByDefault="false"
                                android:clickable="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/location_list"
                                android:scrollbars="none"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>
                        <!--<EditText-->
                            <!--android:id="@+id/location_search"-->
                            <!--android:background="#ffffff"-->
                            <!--android:padding="10dp"-->
                            <!--android:layout_margin="5dp"-->
                            <!--android:drawableEnd="@drawable/search"-->
                            <!--android:drawableRight="@drawable/search"-->
                            <!--android:hint="Search Location"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content" />-->

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/weather_card"
                        android:layout_width="match_parent"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        android:animateLayoutChanges="true"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textStyle="bold"
                                android:id="@+id/location"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/location"
                                android:textSize="20sp"
                                android:textColor="#000000"/>

                            <TextView
                                android:id="@+id/calculated_at"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/location"
                                android:layout_alignLeft="@+id/location"
                                android:layout_alignStart="@+id/location"
                                android:textColor="#000000"
                                android:text="@string/calculated_at"
                                android:textStyle="bold"
                                android:textSize="15sp"/>

                            <TextView
                                android:id="@+id/temperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/calculated_at"
                                android:layout_alignStart="@id/calculated_at"
                                android:layout_alignLeft="@id/calculated_at"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:text="0°C"
                                android:textColor="#000000"
                                android:textSize="50sp" />

                            <ImageView
                                android:id="@+id/weather_image"
                                android:layout_below="@+id/calculated_at"
                                android:src="@drawable/versus_logo"
                                android:layout_toEndOf="@+id/temperature"
                                android:layout_toRightOf="@id/temperature"
                                android:layout_marginTop="5dp"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:contentDescription="@string/weather_image"/>

                            <TextView
                                android:id="@+id/weather_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/temperature"
                                android:text="@string/type"
                                android:textStyle="bold"
                                android:layout_alignLeft="@id/temperature"
                                android:layout_alignStart="@id/temperature"/>

                            <ImageButton
                                android:id="@+id/expand_weather_card"
                                android:contentDescription="@string/expand_weather_card"
                                android:layout_below="@+id/weather_type"
                                android:background="?attr/selectableItemBackground"
                                android:src="@drawable/expand_arrow"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/wind_details"
                                android:text="windSpeed"
                                android:textStyle="bold"
                                android:visibility="gone"
                                android:layout_below="@+id/weather_type"
                                android:layout_alignLeft="@+id/weather_type"
                                android:layout_alignStart="@+id/weather_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/cloudiness"
                                android:text="@string/cloudiness"
                                android:textStyle="bold"
                                android:visibility="gone"
                                android:layout_below="@+id/wind_details"
                                android:layout_alignLeft="@+id/wind_details"
                                android:layout_alignStart="@+id/wind_details"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/latitude"
                                android:layout_below="@id/cloudiness"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="lat"
                                android:visibility="gone"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/longitude"
                                android:layout_below="@id/latitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="lon"
                                android:visibility="gone"
                                android:textStyle="bold"/>

                            <ImageButton
                                android:id="@+id/collapse_weather_card"
                                android:contentDescription="@string/collapse_weather_card"
                                android:layout_below="@+id/longitude"
                                android:background="?attr/selectableItemBackground"
                                android:src="@drawable/collapse_arrow"
                                android:visibility="gone"
                                android:layout_alignParentBottom="true"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </ScrollView>

        </android.support.v4.widget.SwipeRefreshLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        app:headerLayout="@layout/header_navigation_view"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</android.support.v4.widget.DrawerLayout>